--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "CRUD for react tutorial tuesdays",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon --use-strict index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,9 @@
   },
   "homepage": "https://github.com/RotaryTiger/react-tutorial-crud#readme",
   "dependencies": {
-    "pg": "^6.1.5"
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "pg": "^6.1.5",
+    "underscore": "^1.8.3"
   }
 }
