--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --use-strict index.js",
+    "setup": "createdb petshop && psql -d petshop -f ./petshop.sql",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
