--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "morgan": "^1.8.1",
     "pg": "^6.1.5",
     "underscore": "^1.8.3"
   }
